--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/PSE-TECO-2020-TEAM1/workspace-management/issues"
   },
-  "homepage": "https://github.com/PSE-TECO-2020-TEAM1/workspace-management#readme"
+  "homepage": "https://github.com/PSE-TECO-2020-TEAM1/workspace-management#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.14"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
+  }
 }
