--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "build-run": "tsc;node dist/app.js"
+    "build-run": "tsc;node dist/app.js",
+    "dev": "NODE_ENV=dev nodemon -r tsconfig-paths/register src/app.ts",
+    "test": "NODE_ENV=test mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"test/**/*.spec.ts\""
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,17 @@
     "mongoose": "^5.11.14"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.22",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3"
   }
 }
