--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "build-run": "tsc;node dist/app.js"
+    "build-run": "tsc;node dist/app.js",
+    "dev": "NODE_ENV=dev nodemon -r ./src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "mongoose": "^5.11.14"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "nodemon": "^2.0.7"
   }
 }
