--- a/package.json
+++ b/package.json
@@ -29,7 +29,16 @@
     "mongoose": "^5.11.14"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/express": "^4.17.11",
-    "nodemon": "^2.0.7"
+    "@types/mocha": "^8.2.0",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.3.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3"
   }
 }
