--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DATABASE_PORT=27017
 DATABASE_USER=atlasAdmin
 DATABASE_PASS=bZFeJA4sPJkXShJI
 DATABASE=workspace-management_dev
-ACCESS_TOKEN_SECRET="sabahci kahvesi"
+ACCESS_TOKEN_SECRET=sabahci_kahvesi
