--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/PSE-TECO-2020-TEAM1/workspace-management#readme",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14"
   },
   "devDependencies": {
