--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/chai-like": "^1.1.0",
+    "@types/chai-things": "^0.0.34",
     "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.0",
     "@types/supertest": "^2.0.10",
     "chai": "^4.3.0",
+    "chai-like": "^1.1.1",
+    "chai-things": "^0.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
