--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 PORT=3000
+
 MODEL_MANAGEMENT_PORT=8000
+MODEL_MANAGEMENT_HOST=localhost
+
 DATABASE_IP=cluster0.adaso.mongodb.net
 DATABASE_PORT=27017
 DATABASE_USER=atlasAdmin
